# fitonduty-database

./: .gitignore  README.md  main.py  pyproject.toml
ansible/: ansible.cfg
ansible/inventory/: campaign-2024.yml  campaign-2025.yml  campaign_2024.yml  campaign_2025.yml  testing.yml
ansible/playbooks/: dashboard.yml  database.yml  reset-database.yml  test.yml  update-dashboard.yml
ansible/roles/fitonduty_dashboard/files/: fitonduty-dashboard.container
ansible/vars/campaign-2024/: main.yml  vault.yml
ansible/vars/campaign-2025/: main.yml  vault.yml
config/environments/: template.yml
config/seed-data/: template-seed.yml  template_seed.yml
python/: add_participants_live.py  append_participants.py  campaign_seed.py  db_manager.py  excluded_days.py  function_manager.py  migration_manager.py  migration_runner.py  setup_excluded_days.py
python/config/: excluded.yml.template
python/examples/: participants_example.csv
schema/functions/: get_group_historical_data.sql  group_participant_ranking.sql  participant_ranking.sql  questionnaire_functions.sql
schema/migrations/: 001_add_data_volume.sql  002_add_questionnaire_table.sql  003_add_campaign_start_date.sql  004_add_excluded_days.sql
schema/tables/: 001_core_tables.sql  002_health_tables.sql  003_indexes.sql  004_permissions.sql  01_core_tables.sql  02_health_tables.sql  03_indexes.sql
scripts/: cleanup-database.sh  deploy.sh  generate-config.sh  migration_runner.py  setup_database.sh.template  setup_environment.sh  test-config.sh  update-dashboard.sh
seed/templates/: db_seed.yaml.template
(+14 files in other folders)
