[project]
name = "fitonduty-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.9.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
